--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,13 @@
+html {
+  /* rem em  */
+  /* rem 相对于根元素html的font-size，r就是root */
+  /* em 相对于父元素的font-size */
+  font-size: 62.5%; /* 16px*0.625=10px 1rem=10px */
+}
+
+html,
+body,
+#root,
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
